# forge

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  high-level-design.md  low-level-design.md  mvp-design.md  mvp-implementation-notes.md  mvp-implementation-plan.md  product.md  review.md  roadmap.md  v2-design.md  v3-design.md
docs/architecture/: README.md  data-model.md  overview.md  pool-and-runtime-session.md
docs/v2/: README.md  driver-design.md  plan.md  sdk-parity.md
examples/: concurrent_agents_demo.py  deep_agents_demo.py
src/forge/: __init__.py  cli.py  config.py  daemon.py  errors.py  models.py
src/forge/client/: __init__.py  http_client.py  local_client.py  sdk.py
src/forge/drivers/: __init__.py
src/forge/events/: __init__.py  bus.py
src/forge/langchain/: __init__.py  sandbox.py
src/forge/pool/: __init__.py  container_pool.py
src/forge/server/: __init__.py
src/forge/services/: __init__.py  execution_service.py  files_service.py  workspace_service.py
src/forge/storage/: __init__.py  workspace_store.py
tests/: __init__.py
tests/integration/: test_execution_service.py  test_sdk_and_langchain.py
tests/unit/: test_files_service.py  test_scaffold.py  test_workspace_service.py  test_workspace_store.py
