[project]
name = "forge-runtime"
version = "0.1.0.dev0"
description = "Resource-pooled workspace runtime for AI agents."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Forge contributors" }]
keywords = ["ai", "agents", "sandbox", "workspace", "runtime", "langchain"]

dependencies = [
  "pydantic>=2.7",
  "aiosqlite>=0.20",
  "aiodocker>=0.24",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "typer>=0.12",
  "zstandard>=0.23",
  "anyio>=4.4",
]

[project.optional-dependencies]
langchain = [
  "deepagents>=0.1",
  "langchain-core>=0.3",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-aiofiles",
]

[project.scripts]
forge = "forge.cli:app"
forged = "forge.daemon:main"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "TID"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiodocker.*", "zstandard.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires docker daemon",
  "e2e: end-to-end deep agents flow",
]
